--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇸🇬 新加坡-3.55MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 未知国家-553.8KB/s(Youtube:不良林), server: v2.tgfaka.com, port: 8443, type: vmess, uuid: 00b19c02-bc00-440a-a397-faf70ac3f44e, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.tgfaka.com}}
   - {name: 🇭🇰 香港-484.2KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20713, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-481.3KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇬🇧 英国-487.7KB/s(Youtube:不良林), server: vpnu.loungers.cc, port: 56830, type: vmess, uuid: d2e92a19-f50c-426e-cd15-03ece7f4f3b1, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws/x-ui, ws-headers: {Host: vpnu.loungers.cc}}
-  - {name: 🇨🇳 中国-391.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-552.1KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: 51.81.223.26, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇭🇰 香港-3.67MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-464.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-436.6KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
+      - 未知国家-553.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-484.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-487.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-552.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
+      - 未知国家-553.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-484.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-487.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-552.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
+      - 未知国家-553.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-484.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-487.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-552.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
@@ -74,11 +74,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
+      - 未知国家-553.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-484.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-487.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-552.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
@@ -89,11 +89,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
+      - 未知国家-553.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-484.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-487.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-552.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
@@ -105,11 +105,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
+      - 未知国家-553.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-484.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-487.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-552.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
@@ -130,11 +130,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
+      - 未知国家-553.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-484.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-481.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-487.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-552.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
