--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.55MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 未知国家-553.8KB/s(Youtube:不良林), server: v2.tgfaka.com, port: 8443, type: vmess, uuid: 00b19c02-bc00-440a-a397-faf70ac3f44e, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.tgfaka.com}}
-  - {name: 🇭🇰 香港-484.2KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20713, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-552.1KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: 51.81.223.26, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-3.67MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-464.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-436.6KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-2.73MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.47MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 未知国家-3.74MB/s(Youtube:不良林), server: v3.tgfaka.com, port: 8443, type: vmess, uuid: 6938c10f-c1a0-43e3-8321-099055f79853, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.tgfaka.com}}
+  - {name: 🇨🇳 中国-160.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-4.28MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-398.5KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇳🇱 荷兰-2.62MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.54MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇺🇸 美国-340.5KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.65MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
-      - 未知国家-553.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-484.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-552.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 未知国家-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-160.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
-      - 未知国家-553.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-484.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-552.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 未知国家-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-160.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
-      - 未知国家-553.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-484.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-552.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 未知国家-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-160.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-484.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
-      - 未知国家-553.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-484.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-552.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 未知国家-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-160.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
-      - 未知国家-553.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-484.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-552.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 未知国家-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-160.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
-      - 未知国家-553.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-484.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-552.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 未知国家-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-160.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.55MB/s(Youtube:不良林)
-      - 未知国家-553.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-484.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-552.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-464.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 未知国家-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-160.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-398.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-340.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.65MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
