--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 未知国家-3.74MB/s(Youtube:不良林), server: v3.tgfaka.com, port: 8443, type: vmess, uuid: 6938c10f-c1a0-43e3-8321-099055f79853, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.tgfaka.com}}
-  - {name: 🇨🇳 中国-160.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-4.28MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-398.5KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-503.3KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-437.9KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-4.88MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-557.6KB/s(Youtube:不良林), server: 36.134.154.119, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇨🇳 中国-5.63MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇳🇱 荷兰-2.62MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.54MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 未知国家-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.63MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.62MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 未知国家-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.63MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.62MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 未知国家-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.63MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.62MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 未知国家-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.63MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.62MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 未知国家-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.63MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.62MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 未知国家-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.63MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.62MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 未知国家-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-160.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.63MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.62MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
